--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
 <script src="https://unpkg.com/jquery"></script>
 <script>
   // Add your code here!
+  $('img').addClass('image-center');
+
+  $('article').find('p:last').remove();
+
+  $('.text-center').css('fontSize', `${Math.floor(Math.random() * (101 - 0) + 0)}px`);
+
+  $('ol').append($('<li>').text('dogs are cool'));
+
+  $('aside')
+    .empty()
+    .append($('<p>').text('Sorry for my existence'));
+
+  $()
+
 </script>
 </body>
 
