Finished part 1 of jQuery mocks

--- a/index.html
+++ b/index.html
@@ -87,7 +87,19 @@
     .empty()
     .append($('<p>').text('Sorry for my existence'));
 
-  $()
+
+  $('.form-control').on('change', function(){
+    let red = $('.form-control').eq(0).val();
+    let green = $('.form-control').eq(1).val();
+    let blue = $('.form-control').eq(2).val();
+
+    $('body').css('background-color', `rgb(${red}, ${green}, ${blue})`);
+  })
+
+
+  $('img').on('click', function(evt) {
+    $(evt.target).remove();
+  })
 
 </script>
 </body>
