--- a/index.html
+++ b/index.html
@@ -74,12 +74,16 @@
 </div>
 <script src="https://unpkg.com/jquery"></script>
 <script>
+  //: global constants
   // Add your code here!
+  const MAX = 100;
+  const MIN = 0;
+
   $('img').addClass('image-center');
 
   $('article').find('p:last').remove();
 
-  $('.text-center').css('fontSize', `${Math.floor(Math.random() * (101 - 0) + 0)}px`);
+  $('.text-center').css('fontSize', `${Math.floor(Math.random() * ((MAX + 1) - MIN) + MIN)}px`);
 
   $('ol').append($('<li>').text('dogs are cool'));
 
@@ -89,9 +93,9 @@
 
 
   $('.form-control').on('change', function(){
-    let red = $('.form-control').eq(0).val();
-    let green = $('.form-control').eq(1).val();
-    let blue = $('.form-control').eq(2).val();
+    const red = $('.form-control').eq(0).val();
+    const green = $('.form-control').eq(1).val();
+    const blue = $('.form-control').eq(2).val();
 
     $('body').css('background-color', `rgb(${red}, ${green}, ${blue})`);
   })
