--- a/movies.html
+++ b/movies.html
@@ -4,8 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
+  <div>
+    <h1>Movies App!</h1>
+  </div>
+  <div>
+    <form>
+      <input class='title' type="text">
+      <input class='rating' type="number">
+      <button class="submit">Submit</button>
+    </form>
+    <ul></ul>
+  </div>
+  <script src="https://unpkg.com/jquery"></script>
+  <script>
+    //code
+    $('.submit').on('submit', function(){
+      let rankedMovie = $('<li>').on('click', function(evt){
+      evt.target.remove();
 
+      rankedMovie.append(('.title').val());
+      rankedMovie.append(('.rating').val());
+      });
+    });
+
+  </script>
 </body>
 </html>
