--- a/movies.html
+++ b/movies.html
@@ -11,23 +11,43 @@
     <h1>Movies App!</h1>
   </div>
   <div>
-    <form>
+    <form class="movie-form">
+      <label for="title">Movie Title: </label>
       <input class='title' type="text">
-      <input class='rating' type="number">
+      <label for="rating">Movie Rating: </label>
+      <input class='rating' type="text">
       <button class="submit">Submit</button>
     </form>
-    <ul></ul>
+    <table class="table table-striped table-bordered" id="movie-list">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Rating</th>
+          <th>Remove</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </div>
   <script src="https://unpkg.com/jquery"></script>
   <script>
     //code
-    $('.submit').on('submit', function(){
-      let rankedMovie = $('<li>').on('click', function(evt){
-      evt.target.remove();
+    $('.movie-form').on('submit', function(event){
+      event.preventDefault();
 
-      rankedMovie.append(('.title').val());
-      rankedMovie.append(('.rating').val());
-      });
+      let title = $('.title').val();
+      let rating = $('.rating').val();
+
+      let newRow = $('<tr>');
+      newRow.append($('<td>').text(title));
+      newRow.append($('<td>').text(rating));
+      newRow.append($('<td>').html('<button class="delete-btn">Remove</button>'));
+
+      $('#movie-list').append(newRow);
+
+      $('tr').on('click', '.delete-btn', function() {
+        $(this.closest('tr')).remove();
+      })
     });
 
   </script>
